--- a/adding.html
+++ b/adding.html
@@ -45,7 +45,7 @@
 
         this.el = document.getElementById('projects');
 
-        var project1 = ['Weiterbildung', '5']
+        var project1 = ['Weiterbildung', '5'];
 
         this.projects = [['Produkt', '1']];
         this.projects.push(project1);
@@ -64,11 +64,11 @@
             }
         };
 
-        this.FetchAll = function() {
+        this.fetch_all = function() {
             var data = '';
 
             if (this.projects.length > 0) {
-                for (i = 0; i < this.projects.length; i++) {
+                for (var i = 0; i < this.projects.length; i++) {
                     data += '<tr>';
                     data += '<td>' + this.projects[i][0] + '</td>' + '<td>' + this.projects[i][1] + ' Stunden' +'</td>';
                     data += '<td><button onclick="app.Edit(' + i + ')">Bearbeiten</button></td>';
@@ -100,8 +100,8 @@
                 // Reset input value
                 el.value = '';
                 effortElem.value = '';
-                // Dislay the new list
-                this.FetchAll();
+                // Display the new list
+                this.fetch_all();
             }
         };
 
@@ -122,7 +122,7 @@
                     // Edit value
                     self.countries.splice(item, 1, country.trim());
                     // Display the new list
-                    self.FetchAll();
+                    self.fetch_all();
                     // Hide fields
                     CloseInput();
                 }
@@ -133,13 +133,13 @@
             // Delete the current row
             this.countries.splice(item, 1);
             // Display the new list
-            this.FetchAll();
+            this.fetch_all();
         };
         */
 
-    }
+    };
 
-    app.FetchAll();
+    app.fetch_all();
 
     function CloseInput() {
         document.getElementById('spoiler').style.display = 'none';
